--- a/library.html
+++ b/library.html
@@ -3,169 +3,209 @@
 <head>
   <meta charset="UTF-8">
   <title>Sitegen Library</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #fff;
+      color: #000;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    h2 {
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+      margin-top: 30px;
+    }
+    h2::before {
+      content: "📂";
+      margin-right: 10px;
+    }
+    button {
+      background: #000;
+      color: #fff;
+      border: none;
+      padding: 6px 12px;
+      margin-top: 8px;
+      cursor: pointer;
+    }
+    button:hover { opacity: 0.8; }
+    .progress-container {
+      width: 100%;
+      background: #eee;
+      border: 1px solid #000;
+      margin: 10px 0;
+    }
+    .progress-bar {
+      height: 16px;
+      background: #000;
+      width: 0%;
+      transition: width 0.3s;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      margin-top: 10px;
+    }
+    .card {
+      border: 1px solid #000;
+      padding: 10px;
+      text-align: center;
+    }
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border: 1px solid #000;
+    }
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.7);
+      align-items: center;
+      justify-content: center;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 20px;
+      max-width: 800px;
+      width: 90%;
+    }
+    .modal img {
+      max-width: 100%;
+      max-height: 400px;
+      display: block;
+      margin: auto;
+    }
+    .modal-controls {
+      text-align: center;
+      margin-top: 10px;
+    }
+  </style>
 </head>
-<body class="bg-white text-black min-h-screen p-6">
-  <header class="mb-6 flex justify-between items-center">
-    <h1 class="text-3xl font-bold">📚 Sitegen Library</h1>
-    <label class="px-4 py-2 bg-black text-white rounded cursor-pointer">
-      Upload ZIP
-      <input type="file" id="uploadInput" accept=".zip" class="hidden">
-    </label>
-  </header>
+<body>
 
-  <!-- Progress Bar -->
-  <div id="progressContainer" class="w-full bg-gray-200 rounded h-4 hidden mb-6">
-    <div id="progressBar" class="bg-black h-4 w-0 rounded"></div>
+<h1>📚 Sitegen Library</h1>
+
+<input type="file" id="upload" multiple />
+<div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
+
+<h2>Templates</h2>
+<div class="grid" id="templates"></div>
+
+<h2>Blocks</h2>
+<div class="grid" id="blocks"></div>
+
+<h2>Themes</h2>
+<div class="grid" id="themes"></div>
+
+<h2>Subscription Boxes</h2>
+<div class="grid" id="subscriptions"></div>
+
+<h2>Misc</h2>
+<div class="grid" id="misc"></div>
+
+<!-- Thumbnail Editor Modal -->
+<div class="modal" id="thumbnailModal">
+  <div class="modal-content">
+    <h3>Edit Thumbnail</h3>
+    <img id="cropImage" src="">
+    <div class="modal-controls">
+      <button onclick="zoomIn()">Zoom In</button>
+      <button onclick="zoomOut()">Zoom Out</button>
+      <button onclick="resetCrop()">Reset</button>
+      <button onclick="saveThumbnail()">Save</button>
+      <button onclick="closeModal()">Close</button>
+    </div>
   </div>
+</div>
 
-  <!-- Sections -->
-  <div id="library">
-    <section id="Templates">
-      <h2 class="text-2xl font-semibold mb-3">📂 Templates</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="TemplatesGrid"></div>
-    </section>
-    <section id="Blocks">
-      <h2 class="text-2xl font-semibold mt-8 mb-3">📂 Blocks</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="BlocksGrid"></div>
-    </section>
-    <section id="Themes">
-      <h2 class="text-2xl font-semibold mt-8 mb-3">📂 Themes</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="ThemesGrid"></div>
-    </section>
-    <section id="Subscriptions">
-      <h2 class="text-2xl font-semibold mt-8 mb-3">📂 Subscription Boxes</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="SubscriptionsGrid"></div>
-    </section>
-    <section id="Misc">
-      <h2 class="text-2xl font-semibold mt-8 mb-3">📂 Misc</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="MiscGrid"></div>
-    </section>
-  </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 <script>
-const uploadInput = document.getElementById('uploadInput');
-const progressContainer = document.getElementById('progressContainer');
-const progressBar = document.getElementById('progressBar');
+let currentCard = null;
+let cropper = null;
 
-uploadInput.addEventListener('change', handleUpload);
+document.getElementById("upload").addEventListener("change", handleUpload);
 
-async function handleUpload(event) {
-  const file = event.target.files[0];
-  if (!file) return;
-
-  progressContainer.classList.remove('hidden');
+async function handleUpload(e) {
+  const files = e.target.files;
+  const progressBar = document.getElementById("progressBar");
   progressBar.style.width = "0%";
 
-  const reader = new FileReader();
-  reader.onload = async function(e) {
-    const data = e.target.result;
-    const zip = await JSZip.loadAsync(data);
-    let category = "Misc";
-    let htmlFile = null;
+  for (let i = 0; i < files.length; i++) {
+    let file = files[i];
+    progressBar.style.width = ((i+1)/files.length*100) + "%";
 
-    // Detect category and find index.html
-    zip.forEach((relativePath, zipEntry) => {
-      if (relativePath.includes("templates/")) category = "Templates";
-      else if (relativePath.includes("blocks/")) category = "Blocks";
-      else if (relativePath.includes("themes/")) category = "Themes";
-      else if (relativePath.includes("subscriptions/")) category = "Subscriptions";
-      if (relativePath.endsWith("index.html")) htmlFile = zipEntry;
-    });
-
-    let thumbnail = null;
-    if (htmlFile) {
-      const htmlContent = await htmlFile.async("text");
-      thumbnail = await generateScreenshot(htmlContent);
+    if (file.name.endsWith(".zip")) {
+      const zip = new JSZip();
+      const contents = await zip.loadAsync(file);
+      for (let filename in contents.files) {
+        if (!contents.files[filename].dir && filename.endsWith("index.html")) {
+          addCard("templates", filename, "https://via.placeholder.com/400x300?text=Template");
+        }
+      }
     } else {
-      thumbnail = "https://via.placeholder.com/400x300?text=No+Preview";
+      let category = "misc";
+      if (file.name.includes("block")) category = "blocks";
+      if (file.name.includes("theme")) category = "themes";
+      if (file.name.includes("subscription")) category = "subscriptions";
+      addCard(category, file.name, "https://via.placeholder.com/400x300?text="+file.name);
     }
-
-    addToLibrary(file.name.replace(".zip",""), category, thumbnail);
-    progressBar.style.width = "100%";
-    setTimeout(()=> progressContainer.classList.add('hidden'), 800);
-  };
-  reader.readAsArrayBuffer(file);
+  }
 }
 
-async function generateScreenshot(htmlContent) {
-  return new Promise(resolve => {
-    const iframe = document.createElement("iframe");
-    iframe.style.position = "absolute";
-    iframe.style.left = "-9999px";
-    document.body.appendChild(iframe);
-    iframe.contentDocument.open();
-    iframe.contentDocument.write(htmlContent);
-    iframe.contentDocument.close();
-
-    iframe.onload = () => {
-      html2canvas(iframe.contentDocument.body).then(canvas => {
-        const dataURL = canvas.toDataURL("image/png");
-        document.body.removeChild(iframe);
-        resolve(dataURL);
-      });
-    };
-  });
-}
-
-function addToLibrary(name, category, thumbnail) {
-  const grid = document.getElementById(category + "Grid") || document.getElementById("MiscGrid");
-  
+function addCard(sectionId, title, imgSrc) {
+  const section = document.getElementById(sectionId);
   const card = document.createElement("div");
-  card.className = "border rounded-lg p-3 bg-white shadow";
-
+  card.className = "card";
   card.innerHTML = `
-    <div class="relative overflow-hidden border h-48 flex items-center justify-center bg-gray-100">
-      <img src="${thumbnail}" class="draggable max-w-none select-none cursor-move" style="transform: translate(0px,0px) scale(1);" />
-    </div>
-    <div class="flex justify-between mt-2">
-      <span class="font-medium">${name}</span>
-      <button class="text-red-600 text-sm">Delete</button>
-    </div>
-    <div class="flex gap-2 mt-2">
-      <button class="zoomIn bg-black text-white px-2 py-1 text-xs rounded">+</button>
-      <button class="zoomOut bg-black text-white px-2 py-1 text-xs rounded">-</button>
-      <button class="saveThumb bg-black text-white px-2 py-1 text-xs rounded">Save</button>
-    </div>
+    <img src="${imgSrc}">
+    <p>${title}</p>
+    <button onclick="openModal(this)">Edit Thumbnail</button>
   `;
-
-  // Dragging + zoom logic
-  const img = card.querySelector("img");
-  let pos = {x:0, y:0}, dragging = false;
-
-  img.addEventListener("mousedown", e => {
-    dragging = true;
-    pos = { x: e.clientX - img.offsetLeft, y: e.clientY - img.offsetTop };
-  });
-  document.addEventListener("mouseup", ()=> dragging=false);
-  document.addEventListener("mousemove", e => {
-    if (dragging) {
-      img.style.transform = `translate(${e.clientX-pos.x}px,${e.clientY-pos.y}px) scale(${currentScale(img)})`;
-    }
-  });
-
-  card.querySelector(".zoomIn").onclick = () => zoom(img, 0.1);
-  card.querySelector(".zoomOut").onclick = () => zoom(img, -0.1);
-  card.querySelector(".saveThumb").onclick = () => alert("Thumbnail saved for " + name);
-  card.querySelector("button.text-red-600").onclick = () => card.remove();
-
-  grid.appendChild(card);
+  section.appendChild(card);
 }
 
-function currentScale(img){
-  const match = img.style.transform.match(/scale\(([^)]+)\)/);
-  return match ? parseFloat(match[1]) : 1;
+function openModal(button) {
+  currentCard = button.parentElement;
+  const img = currentCard.querySelector("img");
+  const cropImg = document.getElementById("cropImage");
+  cropImg.src = img.src;
+  document.getElementById("thumbnailModal").style.display = "flex";
+
+  if (cropper) cropper.destroy();
+  cropper = new Cropper(cropImg, {
+    aspectRatio: 4/3,
+    viewMode: 1
+  });
 }
-function zoom(img, delta){
-  let scale = currentScale(img)+delta;
-  if (scale<0.2) scale=0.2;
-  if (scale>3) scale=3;
-  const match = img.style.transform.match(/translate\(([^)]+)\)/);
-  let translate = match ? match[1] : "0px,0px";
-  img.style.transform = `translate(${translate}) scale(${scale})`;
+
+function closeModal() {
+  document.getElementById("thumbnailModal").style.display = "none";
+  if (cropper) cropper.destroy();
+}
+
+function zoomIn() { cropper.zoom(0.1); }
+function zoomOut() { cropper.zoom(-0.1); }
+function resetCrop() { cropper.reset(); }
+
+function saveThumbnail() {
+  const canvas = cropper.getCroppedCanvas({width:400, height:300});
+  const dataURL = canvas.toDataURL("image/png");
+  currentCard.querySelector("img").src = dataURL;
+  closeModal();
 }
 </script>
+
 </body>
 </html>
