--- a/library.html
+++ b/library.html
@@ -3,55 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>Sitegen Library</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #fff;
       color: #000;
-      margin: 0;
-      padding: 20px;
+      margin: 20px;
     }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    h2 {
-      display: flex;
-      align-items: center;
-      font-size: 18px;
-      margin-top: 30px;
-    }
-    h2::before {
-      content: "📂";
-      margin-right: 10px;
-    }
+    h1 { margin-bottom: 20px; }
     button {
       background: #000;
       color: #fff;
       border: none;
-      padding: 6px 12px;
-      margin-top: 8px;
+      padding: 8px 14px;
+      margin: 5px 0;
       cursor: pointer;
     }
     button:hover { opacity: 0.8; }
-    .progress-container {
+    .progress {
       width: 100%;
       background: #eee;
-      border: 1px solid #000;
+      height: 6px;
       margin: 10px 0;
     }
     .progress-bar {
-      height: 16px;
+      height: 6px;
+      width: 0;
       background: #000;
-      width: 0%;
-      transition: width 0.3s;
     }
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
-      margin-top: 10px;
     }
     .card {
       border: 1px solid #000;
@@ -59,20 +46,20 @@
       text-align: center;
     }
     .card img {
-      width: 100%;
+      max-width: 100%;
       height: 150px;
       object-fit: cover;
-      border: 1px solid #000;
+      border: 1px solid #ccc;
     }
     /* Modal */
     .modal {
       display: none;
       position: fixed;
-      z-index: 1000;
+      z-index: 9999;
       top: 0; left: 0; right: 0; bottom: 0;
       background: rgba(0,0,0,0.7);
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
     .modal-content {
       background: #fff;
@@ -80,132 +67,118 @@
       max-width: 800px;
       width: 90%;
     }
-    .modal img {
+    .crop-container img {
       max-width: 100%;
-      max-height: 400px;
-      display: block;
-      margin: auto;
     }
-    .modal-controls {
-      text-align: center;
-      margin-top: 10px;
+    #hiddenFrame {
+      width: 1000px;
+      height: 800px;
+      position: absolute;
+      left: -9999px;
+      top: -9999px;
+      border: none;
     }
   </style>
 </head>
 <body>
+  <h1>Sitegen Library</h1>
+  <input type="file" id="fileInput" accept=".zip" />
+  <div class="progress"><div class="progress-bar" id="progressBar"></div></div>
+  
+  <h2>Templates</h2>
+  <div class="grid" id="templatesGrid"></div>
 
-<h1>📚 Sitegen Library</h1>
+  <iframe id="hiddenFrame"></iframe>
 
-<input type="file" id="upload" multiple />
-<div class="progress-container"><div class="progress-bar" id="progressBar"></div></div>
-
-<h2>Templates</h2>
-<div class="grid" id="templates"></div>
-
-<h2>Blocks</h2>
-<div class="grid" id="blocks"></div>
-
-<h2>Themes</h2>
-<div class="grid" id="themes"></div>
-
-<h2>Subscription Boxes</h2>
-<div class="grid" id="subscriptions"></div>
-
-<h2>Misc</h2>
-<div class="grid" id="misc"></div>
-
-<!-- Thumbnail Editor Modal -->
-<div class="modal" id="thumbnailModal">
-  <div class="modal-content">
-    <h3>Edit Thumbnail</h3>
-    <img id="cropImage" src="">
-    <div class="modal-controls">
+  <!-- Modal for Thumbnail Editing -->
+  <div class="modal" id="thumbModal">
+    <div class="modal-content">
+      <h3>Edit Thumbnail</h3>
+      <div class="crop-container">
+        <img id="cropImage" src="">
+      </div>
+      <br>
       <button onclick="zoomIn()">Zoom In</button>
       <button onclick="zoomOut()">Zoom Out</button>
       <button onclick="resetCrop()">Reset</button>
-      <button onclick="saveThumbnail()">Save</button>
-      <button onclick="closeModal()">Close</button>
+      <button onclick="saveCrop()">Save</button>
+      <button onclick="closeModal()">Cancel</button>
     </div>
   </div>
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
 <script>
-let currentCard = null;
+const fileInput = document.getElementById("fileInput");
+const progressBar = document.getElementById("progressBar");
+const templatesGrid = document.getElementById("templatesGrid");
+const hiddenFrame = document.getElementById("hiddenFrame");
+
+let currentCardImg = null;
 let cropper = null;
 
-document.getElementById("upload").addEventListener("change", handleUpload);
+fileInput.addEventListener("change", async (e) => {
+  const file = e.target.files[0];
+  if (!file) return;
 
-async function handleUpload(e) {
-  const files = e.target.files;
-  const progressBar = document.getElementById("progressBar");
-  progressBar.style.width = "0%";
+  const reader = new FileReader();
+  reader.onload = async (ev) => {
+    const zip = await JSZip.loadAsync(ev.target.result);
+    progressBar.style.width = "20%";
 
-  for (let i = 0; i < files.length; i++) {
-    let file = files[i];
-    progressBar.style.width = ((i+1)/files.length*100) + "%";
+    const indexFile = zip.file("index.html");
+    if (indexFile) {
+      const indexContent = await indexFile.async("string");
+      const blob = new Blob([indexContent], { type: "text/html" });
+      const url = URL.createObjectURL(blob);
 
-    if (file.name.endsWith(".zip")) {
-      const zip = new JSZip();
-      const contents = await zip.loadAsync(file);
-      for (let filename in contents.files) {
-        if (!contents.files[filename].dir && filename.endsWith("index.html")) {
-          addCard("templates", filename, "https://via.placeholder.com/400x300?text=Template");
-        }
-      }
+      hiddenFrame.onload = async () => {
+        await new Promise(r => setTimeout(r, 800)); // wait render
+        html2canvas(hiddenFrame.contentDocument.body).then(canvas => {
+          const dataURL = canvas.toDataURL("image/png");
+
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <img src="${dataURL}">
+            <br>
+            <button onclick="openModal(this)">Edit Thumbnail</button>
+          `;
+          templatesGrid.appendChild(card);
+          progressBar.style.width = "100%";
+          setTimeout(() => { progressBar.style.width = "0"; }, 1000);
+        });
+      };
+      hiddenFrame.src = url;
     } else {
-      let category = "misc";
-      if (file.name.includes("block")) category = "blocks";
-      if (file.name.includes("theme")) category = "themes";
-      if (file.name.includes("subscription")) category = "subscriptions";
-      addCard(category, file.name, "https://via.placeholder.com/400x300?text="+file.name);
+      alert("No index.html found in ZIP");
+      progressBar.style.width = "0";
     }
-  }
-}
+  };
+  reader.readAsArrayBuffer(file);
+});
 
-function addCard(sectionId, title, imgSrc) {
-  const section = document.getElementById(sectionId);
-  const card = document.createElement("div");
-  card.className = "card";
-  card.innerHTML = `
-    <img src="${imgSrc}">
-    <p>${title}</p>
-    <button onclick="openModal(this)">Edit Thumbnail</button>
-  `;
-  section.appendChild(card);
-}
-
-function openModal(button) {
-  currentCard = button.parentElement;
-  const img = currentCard.querySelector("img");
-  const cropImg = document.getElementById("cropImage");
-  cropImg.src = img.src;
-  document.getElementById("thumbnailModal").style.display = "flex";
-
-  if (cropper) cropper.destroy();
-  cropper = new Cropper(cropImg, {
-    aspectRatio: 4/3,
-    viewMode: 1
+function openModal(btn) {
+  currentCardImg = btn.parentElement.querySelector("img");
+  document.getElementById("cropImage").src = currentCardImg.src;
+  document.getElementById("thumbModal").style.display = "flex";
+  cropper = new Cropper(document.getElementById("cropImage"), {
+    aspectRatio: 16/9,
+    viewMode: 1,
   });
 }
-
 function closeModal() {
-  document.getElementById("thumbnailModal").style.display = "none";
-  if (cropper) cropper.destroy();
+  if (cropper) { cropper.destroy(); cropper = null; }
+  document.getElementById("thumbModal").style.display = "none";
 }
-
-function zoomIn() { cropper.zoom(0.1); }
-function zoomOut() { cropper.zoom(-0.1); }
-function resetCrop() { cropper.reset(); }
-
-function saveThumbnail() {
-  const canvas = cropper.getCroppedCanvas({width:400, height:300});
-  const dataURL = canvas.toDataURL("image/png");
-  currentCard.querySelector("img").src = dataURL;
+function saveCrop() {
+  if (cropper && currentCardImg) {
+    const canvas = cropper.getCroppedCanvas({ width: 400, height: 225 });
+    currentCardImg.src = canvas.toDataURL("image/png");
+  }
   closeModal();
 }
+function zoomIn() { if (cropper) cropper.zoom(0.1); }
+function zoomOut() { if (cropper) cropper.zoom(-0.1); }
+function resetCrop() { if (cropper) cropper.reset(); }
 </script>
-
 </body>
 </html>
