--- a/library.html
+++ b/library.html
@@ -5,180 +5,174 @@
   <title>Sitegen Library</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff;
-      color: #000;
-      margin: 20px;
+    body { background: #fff; color: #000; font-family: Arial, sans-serif; margin: 0; padding: 20px; }
+    h1 { font-size: 28px; margin-bottom: 20px; }
+    .upload-section { margin-bottom: 30px; }
+    button, input[type=file] {
+      background: #000; color: #fff; border: none; padding: 10px 15px;
+      border-radius: 6px; cursor: pointer; font-size: 14px;
     }
-    h1 { margin-bottom: 20px; }
-    button {
-      background: #000;
-      color: #fff;
-      border: none;
-      padding: 8px 14px;
-      margin: 5px 0;
-      cursor: pointer;
-    }
-    button:hover { opacity: 0.8; }
-    .progress {
-      width: 100%;
-      background: #eee;
-      height: 6px;
-      margin: 10px 0;
-    }
-    .progress-bar {
-      height: 6px;
-      width: 0;
-      background: #000;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
+    button:hover { opacity: 0.85; }
+    .progress-bar { width: 100%; height: 6px; background: #ddd; margin-top: 10px; border-radius: 3px; }
+    .progress-bar-inner { width: 0%; height: 100%; background: #000; transition: width 0.4s; border-radius: 3px; }
+    .grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
     .card {
-      border: 1px solid #000;
-      padding: 10px;
-      text-align: center;
+      border: 1px solid #000; border-radius: 8px; padding: 15px; background: #fff;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
     }
-    .card img {
-      max-width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border: 1px solid #ccc;
-    }
-    /* Modal */
+    .card img { width: 100%; height: 160px; object-fit: cover; border: 1px solid #000; border-radius: 6px; }
+    .card h3 { font-size: 16px; margin: 10px 0; }
     .modal {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
+      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7); justify-content: center; align-items: center;
     }
     .modal-content {
-      background: #fff;
-      padding: 20px;
-      max-width: 800px;
-      width: 90%;
+      background: #fff; padding: 20px; border-radius: 10px; max-width: 90%; max-height: 90%; overflow: auto;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
-    .crop-container img {
-      max-width: 100%;
-    }
-    #hiddenFrame {
-      width: 1000px;
-      height: 800px;
-      position: absolute;
-      left: -9999px;
-      top: -9999px;
-      border: none;
-    }
+    .modal-content img { max-width: 100%; max-height: 70vh; }
+    .modal-buttons { margin-top: 15px; display: flex; gap: 10px; }
   </style>
 </head>
 <body>
-  <h1>Sitegen Library</h1>
-  <input type="file" id="fileInput" accept=".zip" />
-  <div class="progress"><div class="progress-bar" id="progressBar"></div></div>
-  
-  <h2>Templates</h2>
-  <div class="grid" id="templatesGrid"></div>
 
-  <iframe id="hiddenFrame"></iframe>
+  <h1>📂 Sitegen Library</h1>
 
-  <!-- Modal for Thumbnail Editing -->
-  <div class="modal" id="thumbModal">
+  <div class="upload-section">
+    <input type="file" id="fileInput" accept=".zip">
+    <div class="progress-bar"><div class="progress-bar-inner" id="progress"></div></div>
+  </div>
+
+  <div class="grid" id="libraryGrid"></div>
+
+  <!-- Thumbnail Editor Modal -->
+  <div class="modal" id="thumbnailModal">
     <div class="modal-content">
-      <h3>Edit Thumbnail</h3>
-      <div class="crop-container">
-        <img id="cropImage" src="">
+      <h2>Edit Thumbnail</h2>
+      <img id="cropperImage" src="">
+      <div class="modal-buttons">
+        <button id="saveThumbnail">Save</button>
+        <button id="closeModal">Cancel</button>
       </div>
-      <br>
-      <button onclick="zoomIn()">Zoom In</button>
-      <button onclick="zoomOut()">Zoom Out</button>
-      <button onclick="resetCrop()">Reset</button>
-      <button onclick="saveCrop()">Save</button>
-      <button onclick="closeModal()">Cancel</button>
     </div>
   </div>
 
 <script>
-const fileInput = document.getElementById("fileInput");
-const progressBar = document.getElementById("progressBar");
-const templatesGrid = document.getElementById("templatesGrid");
-const hiddenFrame = document.getElementById("hiddenFrame");
+let templates = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
+let currentEditIndex = null;
+let cropper;
 
-let currentCardImg = null;
-let cropper = null;
+// Render library
+function renderLibrary() {
+  const grid = document.getElementById("libraryGrid");
+  grid.innerHTML = "";
+  templates.forEach((tpl, index) => {
+    const card = document.createElement("div");
+    card.className = "card";
+    card.innerHTML = `
+      <img src="${tpl.thumbnail}" alt="Template Thumbnail">
+      <h3>${tpl.name}</h3>
+      <button onclick="openThumbnailEditor(${index})">Edit Thumbnail</button>
+      <button onclick="deleteTemplate(${index})">Delete</button>
+    `;
+    grid.appendChild(card);
+  });
+}
 
-fileInput.addEventListener("change", async (e) => {
+// Handle file upload
+document.getElementById("fileInput").addEventListener("change", async (e) => {
   const file = e.target.files[0];
   if (!file) return;
 
-  const reader = new FileReader();
-  reader.onload = async (ev) => {
-    const zip = await JSZip.loadAsync(ev.target.result);
-    progressBar.style.width = "20%";
+  const progress = document.getElementById("progress");
+  progress.style.width = "0%";
 
-    const indexFile = zip.file("index.html");
-    if (indexFile) {
-      const indexContent = await indexFile.async("string");
-      const blob = new Blob([indexContent], { type: "text/html" });
-      const url = URL.createObjectURL(blob);
+  const zip = await JSZip.loadAsync(file);
+  progress.style.width = "30%";
 
-      hiddenFrame.onload = async () => {
-        await new Promise(r => setTimeout(r, 800)); // wait render
-        html2canvas(hiddenFrame.contentDocument.body).then(canvas => {
-          const dataURL = canvas.toDataURL("image/png");
+  let indexFile = zip.file("index.html");
+  if (!indexFile) {
+    alert("No index.html found in ZIP");
+    return;
+  }
 
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <img src="${dataURL}">
-            <br>
-            <button onclick="openModal(this)">Edit Thumbnail</button>
-          `;
-          templatesGrid.appendChild(card);
-          progressBar.style.width = "100%";
-          setTimeout(() => { progressBar.style.width = "0"; }, 1000);
-        });
-      };
-      hiddenFrame.src = url;
-    } else {
-      alert("No index.html found in ZIP");
-      progressBar.style.width = "0";
-    }
+  const htmlContent = await indexFile.async("string");
+  progress.style.width = "60%";
+
+  // Create hidden iframe to render and screenshot
+  const iframe = document.createElement("iframe");
+  iframe.style.position = "absolute";
+  iframe.style.left = "-9999px";
+  document.body.appendChild(iframe);
+  iframe.contentDocument.open();
+  iframe.contentDocument.write(htmlContent);
+  iframe.contentDocument.close();
+
+  iframe.onload = async () => {
+    const canvas = await html2canvas(iframe.contentDocument.body);
+    const thumbnail = canvas.toDataURL("image/png");
+
+    templates.push({
+      name: file.name.replace(".zip", ""),
+      thumbnail
+    });
+    localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+    renderLibrary();
+
+    progress.style.width = "100%";
+    setTimeout(() => { progress.style.width = "0%"; }, 1500);
+    iframe.remove();
   };
-  reader.readAsArrayBuffer(file);
 });
 
-function openModal(btn) {
-  currentCardImg = btn.parentElement.querySelector("img");
-  document.getElementById("cropImage").src = currentCardImg.src;
-  document.getElementById("thumbModal").style.display = "flex";
-  cropper = new Cropper(document.getElementById("cropImage"), {
-    aspectRatio: 16/9,
+// Open thumbnail editor
+function openThumbnailEditor(index) {
+  currentEditIndex = index;
+  document.getElementById("thumbnailModal").style.display = "flex";
+  const image = document.getElementById("cropperImage");
+  image.src = templates[index].thumbnail;
+
+  if (cropper) cropper.destroy();
+  cropper = new Cropper(image, {
+    aspectRatio: 16 / 9,
     viewMode: 1,
+    dragMode: 'move',
+    responsive: true,
+    movable: true,
+    restore: false,
+    background: false
   });
 }
-function closeModal() {
-  if (cropper) { cropper.destroy(); cropper = null; }
-  document.getElementById("thumbModal").style.display = "none";
-}
-function saveCrop() {
-  if (cropper && currentCardImg) {
+
+// Save cropped thumbnail
+document.getElementById("saveThumbnail").onclick = () => {
+  if (cropper && currentEditIndex !== null) {
     const canvas = cropper.getCroppedCanvas({ width: 400, height: 225 });
-    currentCardImg.src = canvas.toDataURL("image/png");
+    templates[currentEditIndex].thumbnail = canvas.toDataURL("image/png");
+    localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+    renderLibrary();
+    closeModal();
   }
-  closeModal();
+};
+
+// Close modal
+document.getElementById("closeModal").onclick = closeModal;
+function closeModal() {
+  document.getElementById("thumbnailModal").style.display = "none";
+  if (cropper) cropper.destroy();
+  cropper = null;
 }
-function zoomIn() { if (cropper) cropper.zoom(0.1); }
-function zoomOut() { if (cropper) cropper.zoom(-0.1); }
-function resetCrop() { if (cropper) cropper.reset(); }
+
+function deleteTemplate(index) {
+  templates.splice(index, 1);
+  localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+  renderLibrary();
+}
+
+renderLibrary();
 </script>
 </body>
 </html>
