--- a/library.html
+++ b/library.html
@@ -63,8 +63,43 @@
       height: 150px;
       object-fit: cover;
       border: 1px solid #ccc;
+      cursor: pointer;
+    }
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .modal-content {
+      background: #fff;
+      padding: 20px;
+      border: 1px solid #000;
+      text-align: center;
+      max-width: 90%;
+    }
+    .modal img {
+      max-width: 100%;
+      max-height: 70vh;
+    }
+    .modal button {
+      margin: 10px;
+      padding: 8px 16px;
+      border: 1px solid #000;
+      background: #fff;
+      cursor: pointer;
+    }
+    .modal button.save {
+      background: #000;
+      color: #fff;
     }
   </style>
+  <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -92,11 +127,23 @@
 
   <div id="libraryContent" class="grid"></div>
 
+  <!-- Thumbnail Editor Modal -->
+  <div class="modal" id="editorModal">
+    <div class="modal-content">
+      <h3>Edit Thumbnail</h3>
+      <img id="editorImage">
+      <div>
+        <button id="saveThumb" class="save">Save</button>
+        <button id="cancelThumb">Cancel</button>
+      </div>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.js"></script>
 
   <script>
-    // Initialize library with all categories
     let library = JSON.parse(localStorage.getItem("sitegenLibrary")) || {
       templates: [],
       blocks: [],
@@ -104,6 +151,8 @@
       subscriptions: []
     };
     let currentTab = "templates";
+    let currentEditIndex = null;
+    let cropper = null;
 
     function renderLibrary() {
       const content = document.getElementById("libraryContent");
@@ -113,7 +162,7 @@
         card.className = "card";
         if (item.thumbnail) {
           card.innerHTML = `
-            <img src="${item.thumbnail}" alt="Thumbnail">
+            <img src="${item.thumbnail}" alt="Thumbnail" data-index="${i}">
             <p>${item.name}</p>
           `;
         } else {
@@ -121,7 +170,48 @@
         }
         content.appendChild(card);
       });
+
+      // Add click to open editor
+      document.querySelectorAll(".card img").forEach(img => {
+        img.addEventListener("click", () => {
+          currentEditIndex = img.dataset.index;
+          openEditor(library[currentTab][currentEditIndex].thumbnail);
+        });
+      });
     }
+
+    // Open thumbnail editor
+    function openEditor(src) {
+      const modal = document.getElementById("editorModal");
+      const editorImage = document.getElementById("editorImage");
+      modal.style.display = "flex";
+      editorImage.src = src;
+      if (cropper) cropper.destroy();
+      cropper = new Cropper(editorImage, {
+        aspectRatio: 16/9,
+        viewMode: 1
+      });
+    }
+
+    document.getElementById("cancelThumb").addEventListener("click", () => {
+      document.getElementById("editorModal").style.display = "none";
+      if (cropper) cropper.destroy();
+    });
+
+    document.getElementById("saveThumb").addEventListener("click", () => {
+      if (cropper && currentEditIndex !== null) {
+        const canvas = cropper.getCroppedCanvas({
+          width: 400,
+          height: 225
+        });
+        const dataUrl = canvas.toDataURL("image/png");
+        library[currentTab][currentEditIndex].thumbnail = dataUrl;
+        localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+        renderLibrary();
+        document.getElementById("editorModal").style.display = "none";
+        cropper.destroy();
+      }
+    });
 
     // Tabs switching
     document.querySelectorAll(".tabs button").forEach(btn => {
@@ -141,7 +231,6 @@
       const progress = document.getElementById("progress");
       progress.style.width = "0%";
 
-      // Ensure category exists
       if (!library[type + "s"]) library[type + "s"] = [];
 
       if (type === "template") {
